# aiida-qe-app

./: .gitignore  README.md  design-summary.md  notes.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: python-publish.yml
aiida_qe_app/: __init__.py  cli.py
aiida_qe_app/backend/: main.py
aiida_qe_app/backend/app/: api.py  calculation.py  code.py  computer.py  job_history.py  models.py  submit.py  utils.py
aiida_qe_app/backend/app/plugins/electronic_structure/: api.py  utils.py
aiida_qe_app/backend/app/plugins/pdos/: api.py  settings.py
aiida_qe_app/workflows/: qeapp_workchain.py  qeapp_workgraph.py
frontend/: AddComputer.js  design-summary.md  package-lock.json  package.json
frontend/public/: index.html  react-jsx-runtime-shim.js  react-shim.js
frontend/src/: App.js  index.js
frontend/src/components/: CalculationWizard.js  GetStarted.js  InitialStepsData.js  JobHistory.js  LazyPluginLoader.js
frontend/src/components/computational_resources/: CodeResourcesTab.js
frontend/src/components/plugins/: index.js
frontend/src/components/plugins/electronic_structure/: Result.js  index.js
frontend/src/components/plugins/pdos/: CodeResources.js  Result.js  Setting.js
frontend/src/components/plugins/xps/: Result.js  Setting.js  index.js
frontend/src/components/results/: FinalStructure.js  JobStatus.js
frontend/src/components/review_submit/: LabelGroup.js  ReviewAndSubmit.js  utils.js
frontend/src/components/settings/: AiiDAComputerSetup.js  CodesList.js  ComputersList.js  DaemonControl.js
frontend/src/components/structure_selection/: StructureSelection.js
frontend/src/components/widgets/: BandsPdosPlot.js  CodeSelector.js  StructureViewer.js
frontend/src/components/wizard/: AccordionStep.js  AccordionWizard.js  WizardContext.js
frontend/src/components/workflow/: AdvancedSettingsTab.js  HubbardSettingsTab.js  Magnetization.js  Pseudo.js
qeapp/: __init__.py  cli.py  utils.py
qeapp/backend/: main.py
qeapp/backend/app/: api.py  calculation.py  computer.py  job_history.py  models.py  submit.py  utils.py  workgraph.py
qeapp/backend/app/plugins/bands/: api.py  settings.py  utils.py
qeapp/backend/app/plugins/electronic_structure/: utils.py
qeapp/backend/app/plugins/pdos/: api.py  settings.py
qeapp/backend/app/plugins/xps/: api.py  results.py  settings.py
qeapp/frontend/: .env  AddCode.js  design-summary.md  package-lock.json  package.json  rollup.config.js
qeapp/frontend/src/: App.css  App.js  index.js
qeapp/frontend/src/components/: AccordionStep.js  AccordionWizard.js  AdvancedSettingsTab.js  BandsStructureTab.js  BasicSettingsTab.js  CalculationWizard.js  ChooseResourcesTab.js  CodesList.js  ComputersList.js  DaemonControl.js  FinalStructure.js  Footer.js  GetStarted.js  InitialStepsData.js  JobHistory.js  JobStatus.js  LazyPluginLoader.js  PDOSTab.js  ReviewAndSubmit.js  Settings.js  Step.js  StructureSelection.js  StructureViewer.js  WizardTabs.js  XPSResultTab.js  XPSTab.js
qeapp/frontend/src/components/computational_resources/: ChooseResourcesTab.js  CodeResourcesTab.js
qeapp/frontend/src/components/plugins/: index.js
qeapp/frontend/src/components/results/: FinalStructure.js  JobStatus.js  WorkflowSummary.js
qeapp/frontend/src/components/review_submit/: LabelGroup.js  ReviewAndSubmit.js  utils.js
qeapp/frontend/src/components/settings/: AiiDACodeSetup.js  AiiDAComputerSetup.js  CodesList.js  ComputersList.js  DaemonControl.js  Settings.js
qeapp/frontend/src/components/structure_selection/: StructureSelection.js
qeapp/frontend/src/components/widgets/: BandsPdosPlot.js  CodeResourcesTab.js  CodeSelector.js  StructureViewer.js
qeapp/workflows/: qeapp_workchain.py  qeapp_workgraph.py
src/: App.css  App.js
src/components/: AccordionStep.js  AccordionWizard.js  AdvancedSettingsTab.js  AiiDACodeSetup.js  AiiDAComputerSetup.js  BasicSettingsTab.js  ChooseResourcesTab.js  GetStarted.js  Header.js  JobHistory.js  ReviewAndSubmit.js  Settings.js  StructureSelection.js  Tabs.js  Wizard.js
tests/: test_workgraph.ipynb
tests/datas/: Pt.cif
(+23 files in other folders)
